--- a/scss/style.scss
+++ b/scss/style.scss
@@ -813,20 +813,21 @@ h4 { font-size: 11px; font-weight:bold; }
     &.search, &.project { display:none; }
     &.search .results {
       position:relative;
-      left: -10px;
+      width: 290px;
 
       li {
-        list-style:none;
         opacity:0;
-        width:270px;
+        width: 270px;
+        margin: 0 0 10px 0px;
+        padding: 0 0 0 10px;
+
+        @include icons-sprite(bullet, $offset-y: 8px);
+        border: none;
+        line-height:20px;
+        list-style:none;
 
         a { cursor:pointer; border-bottom: 1px dashed $subtle_gray; }
 
-        margin: 0 0 10px 0;
-        padding: 0 0 0 10px;
-        @include icons-sprite(bullet, $offset-y: 8px);
-        line-height:20px;
-        border: none;
       }
     }
 
