--- a/css/helpers.css
+++ b/css/helpers.css
@@ -1,1 +1,1 @@
-@font-face{font-family:'NewsCycle';src:url("../fonts/NewsCycle-Regular-webfont.eot");src:url("../fonts/NewsCycle-Regular-webfont.eot?#iefix") format("embedded-opentype"),url("../fonts/NewsCycle-Regular-webfont.woff") format("woff"),url("../fonts/NewsCycle-Regular-webfont.ttf") format("truetype"),url("../fonts/NewsCycle-Regular-webfont.svg#NewsCycleRegular") format("svg");font-weight:normal;font-style:normal}.cf:before,.cf:after{content:"";display:table}.cf:after{clear:both}.cf{zoom:1}
+.cf:before,.cf:after{content:"";display:table}.cf:after{clear:both}.cf{zoom:1}
