--- a/scss/style.scss
+++ b/scss/style.scss
@@ -413,11 +413,25 @@ h4 { font-size: 11px; font-weight:bold; }
   h1 { position:relative; top: 10px; float:left; }
   h1 a { color: $title_blue; }
 
+  .back {
+    display:none;
+
+    position:absolute;
+    right:30px;
+    top: 25px;
+    font: 19px 'News Cycle', sans-serif;
+    color: black;
+    padding: 0 0 0 10px;
+    text-transform: uppercase;
+    background: url(../img/icons/arrows.png) no-repeat left -17px;
+  }
+
   .shadow { position:absolute; left:0; bottom: -12px; background:url(../img/backgrounds/bkg_navigation_shadow.png) repeat-x; width:100%; height:12px; z-index:10;}
 
   ul.filters { // Filters' menu
     position:absolute;
     right:0;
+    top: -5px;
 
     &.disabled > li > a { color:#ccc; background:url(../img/icons/arrows.png) no-repeat right -78px; }
 
@@ -452,7 +466,7 @@ h4 { font-size: 11px; font-weight:bold; }
 .nav .input_field {
   display:none;
   position:absolute;
-  top: -5px;
+  top: -10px;
   right:0;
 
   input[type="text"] {
