--- a/scss/style.scss
+++ b/scss/style.scss
@@ -81,8 +81,8 @@ h4 { font-size: 11px; font-weight:bold; }
 
 .cartodb-logo {
   position: absolute;
-  left: 70px;
-  bottom: 5px;
+  right: 15px;
+  bottom: 25px;
   width: 82px;
   height: 43px;
   @include icons-sprite(vizzuality_white_shadow);
