--- a/scss/style.scss
+++ b/scss/style.scss
@@ -897,7 +897,6 @@ h4 { font-size: 11px; font-weight:bold; }
       .hgroup { // header titles
         width: 283px;
 
-
         h2 { padding: 0 0 15px 0; font-family: 'News Cycle', sans-serif; color:$dark_gray;  line-height:22px;}
         h2.no_border { border:none; padding: 0; }
         h4 { margin: 0 0 6px 0; color:$regular_blue; opacity:.6; text-transform:uppercase; }
@@ -924,8 +923,8 @@ h4 { font-size: 11px; font-weight:bold; }
         &.ashoka strong { color: $green; }
 
         &.icon { padding-left: 15px; }
-        &.icon.agency { @include icons-sprite(agency_mini, $offset-y:6px); }
-        &.icon.ashoka { @include icons-sprite(ashoka_mini, $offset-y:6px); }
+        &.icon.agency { background: transparent url(../img/icons/agency_mini.png) no-repeat left 6px; }
+        &.icon.ashoka { background: transparent url(../img/icons/ashoka_mini.png) no-repeat left 6px; }
       }
     }
   }
