--- a/scss/style.scss
+++ b/scss/style.scss
@@ -840,6 +840,7 @@ h4 { font-size: 11px; font-weight:bold; }
     margin-left:10px;
 
     .counter { display:block; width:270px; margin-bottom: 20px; font-weight:bold; font-size:11px; color:$title_blue; text-transform:uppercase; }
+    .icon.counter { background: transparent url(../img/icons/project_mini.png) no-repeat left 1px; padding-left: 15px; }
 
     &.search, &.project { display:none; }
     &.search .results {
@@ -905,7 +906,7 @@ h4 { font-size: 11px; font-weight:bold; }
     } // header
 
     .legend {
-      margin: 0 0 10px 0;
+      margin: 0 0 7px 0;
 
       li {
         display: block;
